--- a/pom.xml
+++ b/pom.xml
@@ -1,62 +1,64 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  
-  <parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.3.5</version>
-    <relativePath/>
-  </parent>
-  
-  <groupId>com.app</groupId>
-  <artifactId>parent</artifactId>
-  <version>0.0.1</version>
-  <packaging>pom</packaging>
-  
-  <modules>
-    <module>data</module>
-    <module>security</module>
-    <module>server</module>
-  </modules>
-  
-  <properties>
-	  <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	  <java.version>21</java.version>
-	  <maven.compiler.source>21</maven.compiler.source>
-	  <maven.compiler.target>21</maven.compiler.target>
-	  <version.lombok>1.18.42</version.lombok>
-	  <org-mapstruct.version>1.6.3</org-mapstruct.version>
-  </properties>
-  
-  <dependencyManagement>
-	  <dependencies>
-	    <dependency>
-	      <groupId>junit</groupId>
-	      <artifactId>junit</artifactId>
-	      <version>3.8.1</version>
-	      <scope>test</scope>
-	    </dependency>
-        <dependency>
-            <groupId>org.mapstruct</groupId>
-            <artifactId>mapstruct</artifactId>
-            <version>${org-mapstruct.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.mapstruct</groupId>
-            <artifactId>mapstruct-processor</artifactId>
-            <version>${org-mapstruct.version}</version>
-        </dependency>
-	    <dependency>
-	      <groupId>com.app</groupId>
-	      <artifactId>data</artifactId>
-	      <version>${project.version}</version>
-	    </dependency>
-	    <dependency>
-	      <groupId>com.app</groupId>
-	      <artifactId>security</artifactId>
-	      <version>${project.version}</version>
-	    </dependency>
-	  </dependencies>
-  </dependencyManagement>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>3.3.5</version>
+		<relativePath />
+	</parent>
+
+	<groupId>com.app</groupId>
+	<artifactId>parent</artifactId>
+	<version>0.0.1</version>
+	<packaging>pom</packaging>
+
+	<modules>
+		<module>data</module>
+		<module>security</module>
+		<module>server</module>
+	</modules>
+
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<java.version>21</java.version>
+		<maven.compiler.source>21</maven.compiler.source>
+		<maven.compiler.target>21</maven.compiler.target>
+		<version.lombok>1.18.42</version.lombok>
+		<version.org-mapstruct>1.6.3</version.org-mapstruct>
+		<version.hibernate-jpamodelgen>6.3.0.Final</version.hibernate-jpamodelgen>
+	</properties>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+				<version>3.8.1</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.mapstruct</groupId>
+				<artifactId>mapstruct</artifactId>
+				<version>${version.org-mapstruct}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.mapstruct</groupId>
+				<artifactId>mapstruct-processor</artifactId>
+				<version>${version.org-mapstruct}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.app</groupId>
+				<artifactId>data</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.app</groupId>
+				<artifactId>security</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 </project>
